--- a/typingtest.html
+++ b/typingtest.html
@@ -31,6 +31,6 @@
         </div>
     </div>
 
-    <script src="TYPINGTEST/typingspeedtest.js"></script>
+    <script src="typingspeedtest.js"></script>
 </body>
 </html>
