--- a/advancejs.html
+++ b/advancejs.html
@@ -11,6 +11,10 @@
 
 
     <!-- <script src="/ADVANCE JS/scopevaraibles.js"></script> -->
-     <script src="/ADVANCE JS/templatestrings&stringmethods.js"></script>
+     <!-- <script src="/ADVANCE JS/templatestrings&stringmethods.js"></script> -->
+     <!-- <script src="/ADVANCE JS/arraymethods.js"></script> -->
+     <!-- <script src="/ADVANCE JS/spreadoperator.js"></script> -->
+      <!-- <script src="/ADVANCE JS/forofandforin.js"></script> -->
+       <script src="/ADVANCE JS/arrowfunctions.js"></script>
 </body>
 </html>
