--- a/index.html
+++ b/index.html
@@ -42,6 +42,6 @@
        <!-- <script src="/JS BASICS/functions.js"></script> -->
        <!-- <script src="/JS BASICS/highorderloops.js"></script> -->
         <!-- <script src="/JS BASICS/DOM.js"></script> -->
-       <script src="/JS BASICS/fetchAPI.js"></script>
+       <!-- <script src="/JS BASICS/fetchAPI.js"></script> -->
 </body>
 </html>
