finished advanced js course

--- a/advancejs.html
+++ b/advancejs.html
@@ -15,6 +15,13 @@
      <!-- <script src="/ADVANCE JS/arraymethods.js"></script> -->
      <!-- <script src="/ADVANCE JS/spreadoperator.js"></script> -->
       <!-- <script src="/ADVANCE JS/forofandforin.js"></script> -->
-       <script src="/ADVANCE JS/arrowfunctions.js"></script>
+       <!-- <script src="/ADVANCE JS/arrowfunctions.js"></script> -->
+       <!-- <script src="/ADVANCE JS/restoperator.js"></script> -->
+        <!-- <script src="/ADVANCE JS/promise.js"></script> -->
+         <!-- <script src="/ADVANCE JS/async&await.js"></script> -->
+          <!-- <script src="/ADVANCE JS/Classes.js"></script> -->
+
+        <!--- use module ---->
+           <script type="module" src="/ADVANCE JS/module.js"></script>
 </body>
 </html>
